# gview

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  main.rs  repository.rs
src/components/: commit_modal.rs  commit_viewer.rs  content_viewer.rs  explorer.rs  filer.rs  filter.rs  help_modal.rs  mod.rs  operatable_components.rs
src/components/snapshots/: gview__components__commit_viewer__tests__commit_viewer_draw_empty.snap  gview__components__commit_viewer__tests__commit_viewer_draw_long_commit_message.snap  gview__components__commit_viewer__tests__commit_viewer_draw_multiline_commit.snap  gview__components__commit_viewer__tests__commit_viewer_draw_unfocused.snap  gview__components__commit_viewer__tests__commit_viewer_draw_with_commit.snap  gview__components__content_viewer__tests__content_viewer_draw_empty.snap  gview__components__content_viewer__tests__content_viewer_draw_scrolled.snap  gview__components__content_viewer__tests__content_viewer_draw_unfocused.snap  gview__components__content_viewer__tests__content_viewer_draw_with_blame.snap  gview__components__content_viewer__tests__content_viewer_draw_with_content.snap  gview__components__content_viewer__tests__content_viewer_draw_with_line_numbers.snap  gview__components__filer__tests__filer_draw_long_filenames.snap  (+8 more)
src/snapshots/: gview__app__tests__app_draw_help_modal_large_terminal.snap  gview__app__tests__app_draw_help_modal_small_terminal.snap  gview__app__tests__app_draw_normal_state.snap  gview__app__tests__app_draw_with_help_modal_open.snap
