[package]
name = "gview"
version = "0.1.0"
authors = ["Kyoto7250 <kyoto7250@aol.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/kyoto7250/gview"
repository = "https://github.com/kyoto7250/gview"
readme = "README.md"
description = "A TUI Viewer for Specific Git Commit IDs"
keywords = ["git", "cli", "Rust", "tui", "terminal"]
categories = ["command-line-utilities"]
exclude = ["resources/"]


[dependencies]
ratatui = { version = "0.27", features = ["unstable-rendered-line-info"]}
fuzzy-matcher = "0.3.7"
git2 = "0.19.0"
anyhow = "1.0.86"
crossterm = "0.27.0"
color-eyre = "0.6.3"
regex = "1.10.5"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
insta = "1.34"
